--- a/index.html
+++ b/index.html
@@ -3,24 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced AI in Medicine Demo</title>
+    <title>AI-Driven Drug Design Demo</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Advanced AI in Medicine: Predictive Analysis Demo</h1>
-        <p>Enter comprehensive patient information and receive a predictive health analysis.</p>
-        <div class="input-form">
-            <input type="number" id="age" placeholder="Age" min="0" max="100">
-            <input type="text" id="symptoms" placeholder="Symptoms, separated by commas">
-            <select id="gender">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-            </select>
-            <button onclick="simulateAnalysis()">Analyze</button>
+        <h1 class="text-center mt-5">AI-Driven Drug Design Demo</h1>
+        <div class="animation-container" id="animationContainer"></div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <form id="drugDesignForm" class="my-4">
+                    <div class="form-group">
+                        <label for="targetProteinSelect">Target Protein</label>
+                        <select class="form-control" id="targetProteinSelect">
+                            <option>Protein A</option>
+                            <option>Protein B</option>
+                            <option>Protein C</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="diseaseTypeSelect">Disease Type</label>
+                        <select class="form-control" id="diseaseTypeSelect">
+                            <option>Disease A</option>
+                            <option>Disease B</option>
+                            <option>Disease C</option>
+                        </select>
+                    </div>
+                    <button type="button" class="btn btn-primary" onclick="simulateDrugDesign()">Design Drug</button>
+                </form>
+                <canvas id="drugDesignResult"></canvas>
+            </div>
         </div>
-        <canvas id="analysisChart"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
